--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,26 @@
 {
-    "minimum-stability": "dev",
+    "name": "photon/project-template",
+    "type": "project",
+    "description": "Photon project template",
+    "keywords": [
+        "photon",
+        "project",
+        "template"
+    ],
+    "homepage": "http://www.photon-project.com/",
+    "license": "LGPL-2.1",
+    "authors": [
+        {
+            "name": "William MARTIN",
+            "email": "william.martin@power-lan.com",
+            "role": "Developer"
+        },
+        {
+            "name": "Community",
+            "homepage": "https://github.com/photon/project-template/blob/master/CONTRIBUTORS.md"
+        }
+    ],
     "require": {
-        "photon/photon": "dev-develop"
+        "photon/photon": "~2.0"
     }
 }
